# kubarem

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
.github/workflows/: linux.yml
app/: CMakeLists.txt  app.cpp  editor.cpp  editor.h
resources/blueprints/: ball_blueprint.py  cube_blueprint.py  particle_system_blueprint.py  scene_blueprint.py
src/: CMakeLists.txt  box.cpp  box.h  camera.cpp  camera.h  game.cpp  game.h  input.cpp  input.h  log.c  log.cpp  log.h  log.hpp  main.cpp  map.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  planet.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  task_manager.h  text_renderer.cpp  text_renderer.h  third_person_character.cpp  third_person_character.h  utils.h
src/ai/: action.cpp  action.h  node.cpp  node.h  planner.cpp  planner.h  world_state.cpp  world_state.h
src/ai/actions/: ai_action_follow.cpp  ai_action_follow.h  ai_action_none.cpp  ai_action_none.h
src/audio/: audio.cpp  audio.h
src/embeddings/: embeddings.h
src/jobs/: task.h  task_base.h  task_handle.h  task_handle_base.h  task_manager.cpp  task_manager.h  task_worker.cpp  task_worker.h
src/locks/: lock_base.h  lock_test.h  reentrant_lock.cpp  reentrant_lock.h  scoped_lock.h  spin_lock.cpp  spin_lock.h  unnecessary_lock.h
src/objects/: custom_geometry_object.cpp  light_object.cpp  light_object.h  modeled_object.cpp  object.cpp  object.h  third_person_character.cpp
src/particles/: particle.cpp  particle.h  particle_controller.cpp  particle_controller.h  particle_renderer.cpp  particle_renderer.h
src/renderer/: framebuffer.cpp  framebuffer.h  renderer.cpp  renderer.h
src/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  uuid.cpp  uuid.h
src/shaders/: box_fs.glsl  default_fs.glsl  default_vs.glsl  lamp_vs.glsl  main_fs.glsl  main_vs.glsl  object_fs.glsl  object_vs.glsl  particle_fs.glsl  particle_vs.glsl  shadowmap_fs.glsl  shadowmap_vs.glsl  text_vs.glsl
tools/: CMakeLists.txt  editor.cpp  editor.h  gui.cpp  gui.h
